[gd_scene load_steps=4 format=3 uid="uid://bpufyqjnutj65"]

[ext_resource type="Theme" uid="uid://cjpa4v7k8pwke" path="res://ui/default_theme.tres" id="1_cp48l"]
[ext_resource type="Texture2D" uid="uid://b5eexlkflihhy" path="res://assets/imgs/Bars N Boxes/background 2.png" id="2_bunbm"]
[ext_resource type="Script" path="res://scripts/game_over.gd" id="2_hj7py"]

[node name="GameOver" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_cp48l")
script = ExtResource("2_hj7py")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0.784314)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_bunbm")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="GameoverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 128
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 3

[node name="FinalScore" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 80
text = "Final Score: "
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalScoreAmount" type="Label" parent="VBoxContainer/ScoreContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/outline_size = 20
theme_override_font_sizes/font_size = 80
text = "0"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 6

[node name="ExitButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_right = NodePath("../RetryButton")
text = "Exit Game"

[node name="RetryButton" type="Button" parent="VBoxContainer/ButtonContainer"]
layout_mode = 2
focus_neighbor_left = NodePath("../ExitButton")
text = "Retry"

[connection signal="pressed" from="VBoxContainer/ButtonContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="VBoxContainer/ButtonContainer/RetryButton" to="." method="_on_retry_button_pressed"]
